--- a/app/prapp/webapp/manifest.json
+++ b/app/prapp/webapp/manifest.json
@@ -134,7 +134,8 @@
                     "type": "ResponsiveTable"
                   }
                 }
-              }
+              },
+              "initialLoad": "Enabled"
             }
           }
         },
